# rust-audio-exploration

./: .gitignore  README.md  angular.json  log4rs.yaml  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src-tauri/src/audio_handler/: audio_handler.rs  audio_handler_error.rs  hosts.rs  mod.rs
src-tauri/src/ui/: audio_settings.rs  mod.rs  tauri_interface.rs
src-tauri/src/ui/audio_settings/: audio_host.rs  mod.rs  output_device.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
src/app/audio-settings/: audio-settings.component.html  audio-settings.component.spec.ts  audio-settings.component.ts
src/app/audio-settings/components/audio-host-dropdown/: audio-host-dropdown.component.html  audio-host-dropdown.component.spec.ts  audio-host-dropdown.component.ts
src/app/audio-settings/components/output-device-dropdown/: output-device-dropdown.component.html  output-device-dropdown.component.spec.ts  output-device-dropdown.component.ts
src/app/audio-settings/services/: audio-host.service.ts  audio-settings.service.ts  output-device.service.ts
src/app/synthesizer/components/simple-button/: simple-button.component.html  simple-button.component.spec.ts  simple-button.component.ts
src/app/synthesizer/components/simple-knob/: simple-knob.component.html  simple-knob.component.spec.ts  simple-knob.component.ts
