[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.81"

[workspace]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.8", features = [] }

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0.209", features = ["derive"] }
tauri = { version = "2.0.0-rc.8", features = [] }
cpal = { version = "0.15.3", features = ["asio"] }
thiserror = "1.0.63"
log = "0.4.22"
log4rs = "1.3.0"
tauri-plugin-log = "2.0.0-rc.2"
chrono = "0.4.38"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
